--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/tarik teshome.jpg
+    - assets/images/305988167_557900822804249_2187242437538528585_n.jpg
+    - assets/images/302307484_6196175547377844_8109071300482961392_n.jpg
+    - assets/images/302307484_6196175547377844_8109071300482961392_n.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
